Fixed bar z-index issue

--- a/css/_bar.sass
+++ b/css/_bar.sass
@@ -3,6 +3,7 @@ $BAR_HEIGHT: 5px
 .bar
   position: absolute
   display: block
+  z-index: 5
 
   top: 99%
   top: -webkit-calc(100% - 5px)
